tests/files/lexer_tests/should_fail/089.cmdr
//Should not parse due to missing lparen
do echo hi; while true);